--- a/src/styles/_company.css
+++ b/src/styles/_company.css
@@ -80,3 +80,91 @@
                 color: #FFFFFF;
                 text-align: center;
             }
+
+
+
+@media (1850px <= width) {
+
+    .company {
+        height: 892px;
+        /*background-image: url("../images/about/about-desktop-background@1x.jpg");*/
+        /*background-size: cover;*/
+        /*background-repeat: no-repeat;*/
+        /*background-position: center center;*/
+    }
+
+    @media (min-resolution: 1.5dppx) {
+        .company {
+            /*background-image: url("../images/about/about-desktop-background@2x.jpg");*/
+        }
+    }
+
+        .company__content {
+            /*width: 100%;*/
+            /*height: 100%;*/
+            background-image: url("../images/about/about-content-monitor.svg");
+            background-size: 1920px 892px;
+            /*background-repeat: no-repeat;*/
+            /*background-position: center center;*/
+        }
+            .company__wrap {
+                /*position: relative;*/
+                padding-top: 64px;
+            }
+                .company__heading {
+                    /*margin-top: 0;*/
+                    /*margin-bottom: 0;*/
+                    /*font-weight: 600;*/
+                    font-size: 50px;
+                    line-height: 58px;
+                    /*text-align: center;*/
+                    /*color: #FFFFFF;*/
+                }
+
+                .company__description {
+                    margin-top: 29px;
+                    font-weight: bold;
+                    /*font-size: 22px;*/
+                    /*line-height: 28px;*/
+                    /*color: #FFFFFF;*/
+                    /*text-align: center;*/
+                }
+
+                .company__specialization {
+                    /*position: absolute;*/
+                    /*left: 50%;*/
+                    top: 264px;
+                    margin-left: -733px;
+                    /*font-weight: bold;*/
+                    font-size: 30px;
+                    line-height: 37px;
+                    /*color: #FFFFFF;*/
+                    text-transform: none;
+                }
+                    .company__specialization::after {
+                        /*position: absolute;*/
+                        right: -23px;
+                        bottom: -7px;
+                        /*content: "";*/
+                        /*display: block;*/
+                        width: 72px;
+                        height: 31px;
+                        background-image: url("../vectors/arrow-3.svg");
+                        /*background-size: contain;*/
+                        /*background-repeat: no-repeat;*/
+                        /*background-position: center center;*/
+                    }
+
+                .company__features {
+                    /*position: absolute;*/
+                    /*left: 50%;*/
+                    margin-left: -43px;
+                    top: 642px;
+                    /*width: 300px;*/
+                    font-weight: bold;
+                    font-size: 30px;
+                    line-height: 37px;
+                    /*color: #FFFFFF;*/
+                    /*text-align: center;*/
+                }
+}
