--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -259,7 +259,7 @@
                             </div>
                             <div class="footer__legalities">
                                 <a class="link link--inverted-text-alike" href="#">ПОЛИТИКА КОНФИДЕНЦИАЛЬНОСТИ</a><br>
-                                © 2024 Все права защищены
+                                <div class="footer__copyright">© 2024 Все права защищены</div>
                             </div>
                         </div>
                         <div class="footer__contains">
