--- a/src/styles/_footer.css
+++ b/src/styles/_footer.css
@@ -28,8 +28,11 @@
                 margin-top: 41px;
                 font-weight: 400;
                 font-size: 12px;
-                line-height: 21px;
+                line-height: 14px;
             }
+                .footer__copyright {
+                    margin-top: 7px
+                }
 
         .footer__contains {
             margin-top: 2px;
@@ -120,7 +123,7 @@
                 padding: 17px;
                 width: 100%;
                 border: 1px solid #00F0FF;
-                box-shadow: 0 4px 4px rgb(0 0 0 / 10%);
+                box-shadow: 0 4px 4px rgb(0 0 0 / 5%);
                 font-weight: bold;
                 font-size: 16px;
                 line-height: 20px;
@@ -170,6 +173,9 @@
                     /*font-size: 12px;*/
                     /*line-height: 21px;*/
                 }
+                    .footer__copyright {
+
+                    }
 
             .footer__contains {
                 /*margin-top: 2px;*/
@@ -274,4 +280,109 @@
                     /*background-color: rgb(255 255 255 / 10%);*/
                 }
 }
+
+
+
+
+@media (width < 740px) {
+
+    .footer {
+        padding-top: 10px;
+        padding-bottom: 21px;
+        /*background-color: #0D25FF;*/
+        /*color: #FFFFFF;*/
+    }
+        .footer__wrap {
+            position: relative;
+            display: block;
+            /*align-items: stretch;*/
+            /*gap: 28px;*/
+        }
+            .footer__summary {
+                /*margin-top: 2px;*/
+                width: auto;
+                /*flex-shrink: 0;*/
+            }
+                .footer__branding {
+                    margin-left: auto;
+                    margin-right: auto;
+                }
+
+                .footer__address {
+                    /*margin-top: 40px;*/
+                    /*font-size: 17px;*/
+                    /*line-height: 25px;*/
+                    margin-top: 20px;
+                    text-align: center;
+                }
+
+                .footer__legalities {
+                    margin-top: 143px;
+                    text-align: center;
+                    /*font-weight: 400;*/
+                    /*font-size: 12px;*/
+                    /*line-height: 21px;*/
+                }
+                    .footer__copyright {
+                        margin-top: 16px;
+                    }
+
+            .footer__contains {
+                display: none;
+            }
+
+            .footer__addition {
+                width: auto;
+                /*flex-shrink: 0;*/
+                /*display: flex;*/
+                /*flex-direction: column;*/
+                /*align-items: flex-start;*/
+            }
+                .footer__phone {
+                    position: absolute;
+                    left: 0;
+                    right: 0;
+                    margin-left: auto;
+                    margin-right: auto;
+                    bottom: 84px;
+                    /*display: block;*/
+                    /*width: fit-content;*/
+                    /*font-weight: normal;*/
+                    font-size: 22px;
+                    line-height: 22px;
+                    /*color: #FFFFFF;*/
+                    /*text-decoration: none;*/
+                }
+
+                .footer__feedback {
+                    display: none;
+                }
+
+                .footer__request {
+                    position: absolute;
+                    left: 0;
+                    right: 0;
+                    bottom: 128px;
+                    /*margin-top: 101px;*/
+                    /*display: block;*/
+                    width: fit-content;
+                    margin-left: auto;
+                    margin-right: auto;
+                    padding: 8px 14px;
+                    /*border: 1px solid #00F0FF;*/
+                    /*box-shadow: 0 4px 4px rgb(0 0 0 / 10%);*/
+                    /*font-weight: bold;*/
+                    /*font-size: 16px;*/
+                    /*line-height: 20px;*/
+                    /*color: #00F0FF;*/
+                    /*text-align: center;*/
+                    /*text-decoration: none;*/
+                    /*transition: background-color var(--transition-hover);*/
+                }
+
+                .footer__request:hover {
+                    /*background-color: rgb(255 255 255 / 10%);*/
+                }
+}
+
 
