--- a/src/layouts/about.html
+++ b/src/layouts/about.html
@@ -337,7 +337,7 @@
                     </div>
                 </section>
                 <section class="folder">
-                    <div class="folder__gallery container container--no-padding-on-smartphone">
+                    <div class="folder__gallery container">
                         <div class="
                             carousel
                             carousel--js-init-folder
@@ -391,39 +391,39 @@
                                                 >
                                             </a>
                                         </div>
-                                        <div class="swiper-slide">
-                                            <a class="certificate-preview" href="#">
-                                                <img class="certificate-preview__image"
-                                                     srcset="../temp/certificates-preview/certificate-preview-e@2x.jpg 2x"
-                                                     src="../temp/certificates-preview/certificate-preview-e@1x.jpg"
-                                                     width="546"
-                                                     height="772"
-                                                     alt=""
-                                                >
-                                            </a>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <a class="certificate-preview" href="#">
-                                                <img class="certificate-preview__image"
-                                                     srcset="../temp/certificates-preview/certificate-preview-f@2x.jpg 2x"
-                                                     src="../temp/certificates-preview/certificate-preview-f@1x.jpg"
-                                                     width="546"
-                                                     height="772"
-                                                     alt=""
-                                                >
-                                            </a>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <a class="certificate-preview" href="#">
-                                                <img class="certificate-preview__image"
-                                                     srcset="../temp/certificates-preview/certificate-preview-g@2x.jpg 2x"
-                                                     src="../temp/certificates-preview/certificate-preview-g@1x.jpg"
-                                                     width="546"
-                                                     height="772"
-                                                     alt=""
-                                                >
-                                            </a>
-                                        </div>
+<!--                                        <div class="swiper-slide">-->
+<!--                                            <a class="certificate-preview" href="#">-->
+<!--                                                <img class="certificate-preview__image"-->
+<!--                                                     srcset="../temp/certificates-preview/certificate-preview-e@2x.jpg 2x"-->
+<!--                                                     src="../temp/certificates-preview/certificate-preview-e@1x.jpg"-->
+<!--                                                     width="546"-->
+<!--                                                     height="772"-->
+<!--                                                     alt=""-->
+<!--                                                >-->
+<!--                                            </a>-->
+<!--                                        </div>-->
+<!--                                        <div class="swiper-slide">-->
+<!--                                            <a class="certificate-preview" href="#">-->
+<!--                                                <img class="certificate-preview__image"-->
+<!--                                                     srcset="../temp/certificates-preview/certificate-preview-f@2x.jpg 2x"-->
+<!--                                                     src="../temp/certificates-preview/certificate-preview-f@1x.jpg"-->
+<!--                                                     width="546"-->
+<!--                                                     height="772"-->
+<!--                                                     alt=""-->
+<!--                                                >-->
+<!--                                            </a>-->
+<!--                                        </div>-->
+<!--                                        <div class="swiper-slide">-->
+<!--                                            <a class="certificate-preview" href="#">-->
+<!--                                                <img class="certificate-preview__image"-->
+<!--                                                     srcset="../temp/certificates-preview/certificate-preview-g@2x.jpg 2x"-->
+<!--                                                     src="../temp/certificates-preview/certificate-preview-g@1x.jpg"-->
+<!--                                                     width="546"-->
+<!--                                                     height="772"-->
+<!--                                                     alt=""-->
+<!--                                                >-->
+<!--                                            </a>-->
+<!--                                        </div>-->
                                     </div>
                                 </div>
                             </div>
