--- a/src/styles/_carousel.css
+++ b/src/styles/_carousel.css
@@ -69,6 +69,9 @@
             background-color: currentColor;
         }
 
+.carousel--css-default-bullets.carousel--not-enough-slides .carousel__pagination {
+    display: none;
+}
 
 
 
@@ -131,6 +134,11 @@
             fill: #FFFFFF;
         }
 
+
+
+.carousel--css-default-arrow.carousel--not-enough-slides .carousel__button {
+    display: none;
+}
 
 
 @media (1850px <= width) {
